feat: Implement Brave Search API integration and enhance scraping functionality with new search handler

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ REDIS_URL=redis://localhost:6379
 # Only needed if Chrome/Chromium is in a non-standard location
 # CHROME_BIN=/usr/bin/chromium-browser
 # CHROME_PATH=/usr/lib/chromium/
+
+# --- Search API Settings ---
+# Brave Search API Key (Free Tier: 1 req/sec, 2000 req/month)
+BRAVE_SEARCH_API_KEY=YOUR_API_KEY_HERE
